# api-key-manager

./: .gitignore  .task-incomplete  Cargo.toml  README.md
.akm-research/: SYNTHESIS.md  agentsecrets-findings.md  joelhooks-findings.md  lkr-findings.md  psst-findings.md  xenv-findings.md
.claude/tsc-cache/83d28877-fb48-48eb-b813-df554ee82bab/: affected-repos.txt
.github/workflows/: ci.yml
.ritalin/: evidence.jsonl  prove-all.sh
.ritalin-archive/: .task-incomplete
.ritalin-archive/.ritalin/: evidence.jsonl  obligations.jsonl  scope.yaml
src/: audit.rs  cli.rs  envelope.rs  error.rs  exit.rs  keychain.rs  main.rs  redact.rs  skill.rs
src/commands/: add.rs  agent_info.rs  audit_cmd.rs  get.rs  guard.rs  list.rs  mod.rs  push.rs  rm.rs  run.rs  skill_install.rs  stdin_cmd.rs
src/skill/: SKILL.md
tests/: integration.rs
