[package]
name = "api-key-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Boris Djordjevic <d.boris@gmail.com>"]
description = "Agent-driven macOS Keychain CLI for API keys. Zero human friction."
license = "MIT"
repository = "https://github.com/paperfoot/api-key-manager"
homepage = "https://github.com/paperfoot/api-key-manager"
readme = "README.md"
keywords = ["keychain", "secrets", "api-keys", "agent", "cli"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "akm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
security-framework = "2.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
which = "7"
dirs = "5"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
